app/styles/app.scss
.login-btn {
  border-radius: 20px !important;
  color: #fff !important;
}

.col-primary {
  color: #fc4f4f;
}

.img-resize {
  height: auto;
  width: 72px !important;
}

.profile-align {
  float: none;
  margin: 0 auto !important;
  width: 256px;
}

#tags {
  margin-bottom: 5px;
  height: 25px;
  border-radius: 10px;
  overflow: hidden;
}

.chip {
  border-radius: 10px;
  background-color: #d9534f;
  margin-right: 2px;
}

.generate-scroll-y {
  max-height: 200px;
  overflow-y: scroll;
}

#run-output {
  background: #f5f5f5;
  border-color: #3c3c3c;
  border-width: 1px;
}

#editor {
  width: 100%;
  height: 400px;
}

.arrows li:nth-of-type(1) a {
  color: hsl(0, 0%, 70%);
}

.arrows li:nth-of-type(2) a {
  color: hsl(0, 0%, 65%);
}

.arrows li:nth-of-type(3) a {
  color: hsl(0, 0%, 50%);
}

.arrows li:nth-of-type(4) a {
  color: hsl(0, 0%, 45%);
}

.share-buttons img {
  width: 35px;
  padding: 5px;
  border: 0;
  box-shadow: 0;
  display: inline;
}

.pointer {
  cursor: pointer;
}

span.badge.new {
  color: black !important;
}

.isa_info, .isa_success, .isa_warning, .isa_error {
  padding: 12px;

}

.isa_info {
  color: #00529B;
  background-color: #BDE5F8;
}

.isa_success {
  color: #4F8A10;
  background-color: #DFF2BF;
}

.isa_warning {
  color: #9F6000;
  background-color: #FEEFB3;
}

.isa_error {
  color: #D8000C;
  background-color: #FFBABA;
}

.isa_info i, .isa_success i, .isa_warning i, .isa_error i {
  font-size: 2em;
  vertical-align: middle;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.width-navigation {
  .container {
    width: 600px;
    margin-right: 0;
  }
}

#main-menu {
  ul li {
    display: inline;
    text-align: center;
  }

  a {
    display: inline-block;
    margin: 0;
    text-decoration: none;
    padding-bottom: 2px;

  }

  hr {
    height: .15rem;
    width: 0;
    margin: 0;
    background: #2e8ece;
    border: none;
    transition: .3s ease-in-out;
    left: 20px;

  }

  .one.active ~ hr {
    width: 15%;
    margin-left: 4%;
  }

  .two:hover ~ hr {
    margin-left: 25%;
    width: 23%;
    display: block;
  }
  .two.active ~ hr {
    margin-left: 25%;
    width: 25%;
    display: block;
  }

  .three:hover ~ hr {
    margin-left: 56%;
    width: 22%;
    display: block;
  }

  .four:hover ~ hr {
    margin-left: 83%;
    width: 15%;
    display: block;
  }
  .one:hover ~ hr {
    width: 15%;
    margin-left: 4%;
  }

}

.breadcrumb li a {
  color: #cccccc;
}

.contestCard {
  margin-top: 10px;
  margin-bottom: 10px;
  display: flex;
  flex-direction: column;
  height: 500px;
}

.problemCard {
  margin-top: 10px;
}

#custom-input {
  margin-bottom: 10px;
}

.logout-button {
  display: block;
  width: 115px;
  height: 35px;
  background: #9d3030 !important;
  padding: 10px;
  text-align: center;
  border-radius: 5px;
  color: white;
  font-weight: bold;
}

.logout-button:hover {
  color: #9d3030 !important;
  background: white !important;
}

// CSS code for clock

* {
  padding: 0;
  margin: 0;
  outline: none;
}

body {
  font-family: "Open Sans", sans-serif;
  font-size: 14px;
  line-height: 1.428571429;
  color: #333;
  background-color: #eef9fc
}

.terques-bg {
  background: #1fb5ad;
}

.clock-row {
  text-transform: uppercase;
  min-height: 170px;
}

.user-heading {
  color: #fff;
  padding: 30px;
  text-align: center;
}

.user-heading.clock-row {
  padding: 20px;
}

.user-heading.alt {
  display: inline-block;
  width: 100%;
  text-align: left;
}

.clock-row h1 {
  font-size: 22px;
  font-weight: 400;
  letter-spacing: 1px;
  margin: 0 0 5px 0;
  letter-spacing: 1px;
}

.clock-row p {
  font-size: 16px;
  font-weight: 300;
  color: #fff;
  margin: 0;
}

ul#clock li {
  border: none;
}

#clock {
  position: relative;
  width: 185px;
  height: 185px;
  margin: -95px auto 0;
  background: url(/images/clockface.png) no-repeat;
  list-style: none;
}

#sec, #min, #hour {
  position: absolute;
  width: 15px;
  height: 185px;
  top: 0px;
  left: 83px;
}

#sec {
  background: url(/images/sechand.png);
  z-index: 3;
  overflow: hidden;
}

#min {
  background: url(/images/minhand.png);
  z-index: 2;
}

#hour {
  background: url(/images/hourhand.png);
  z-index: 1;
}

#mobleader{
overflow-x: auto; }

.ls-closed .bars:after, .ls-closed .bars:before {
  display: none;
}

//-------------

.para {
  margin: 0px 20px 0px 20px;
}

.daily-problem-div {
  height: 240px;
}

.daily-problem-div p {
  overflow: hidden;
  height: 220px;
}

.custom-card {
  padding: 30px;
}

.contestCard img {
  margin-bottom: 0;
  min-height: 140px;
  height: 140px;
  width: auto;
}

.submit-login-message {
  margin-top: 15px;
  color: #02b3e4;
}

.wrapper-overlay {
  height: 400px;
  width: 100%;
  margin: 0 auto;
  float: none;
  background: url('/images/course-3.jpg');
  opacity: 0.7;
  color: #f44336;
  text-align: center;
  word-wrap: break-word;
  float: none;
  margin: 0 auto;
  border: 1px solid;
}

.time-wrapper {
  height: 125px;
  width: 500px;
  text-align: center;
  word-wrap: break-word;
  float: none;
  margin: 0 auto;
}

.side-align {
  margin-left: 5px;
  float: left;
  border: 1px solid #f44336;
  border-radius: 10px;
  height: 50px;
  width: 22%;
  text-align: center;
  padding-top: 10px;
}

.upcoming-contest-card {
  padding-left: 0px !important;
  padding-right: 0px !important;
}

.description-overlay {
  float: none;
  margin: 0 auto;
  text-align: center;
}

.light-weight {
  font-size: 2em;
  font-weight: 100;
}

.vc-table tr td {
  vertical-align: middle !important;
}

.problem-image-wrapper {
  height: 100px;
  min-height: 100px;
}

.icon-dailycb {
  color: grey;
}

.problem-name-wrapper {
  height: 46px;
}

.caption a {
  margin-top: 10px;
  width: 100%;
}
/* ... */

